--- a/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
+++ b/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
@@ -1,18 +1,18 @@
 <div>
     <div class="row justify-content-center">
         <div class="col-md-8">
-            <h1>Reset your password</h1>
+            <h1>Recuperar contraseña</h1>
 
             <div class="alert alert-danger" *ngIf="errorEmailNotExists">
-                <strong>Email address isn't registered!</strong> Please check and try again.
+                <strong>El correo ingresado no está registrado!</strong> Por favor revisa e intenta de nuevo.
             </div>
 
             <div class="alert alert-warning" *ngIf="!success">
-                <p>Enter the email address you used to register.</p>
+                <p>Ingresa el correo que utilizaste para registrarte.</p>
             </div>
 
             <div class="alert alert-success" *ngIf="success === 'OK'">
-                <p>Check your emails for details on how to reset your password.</p>
+                <p>Revisa tu correo para instrucciones de cómo recuperar tu contraseña.</p>
             </div>
 
             <form *ngIf="!success" name="form" role="form" (ngSubmit)="requestReset()" #resetRequestForm="ngForm">
@@ -23,23 +23,23 @@
                     <div *ngIf="emailInput.dirty && emailInput.invalid">
                         <small class="form-text text-danger"
                            *ngIf="emailInput.errors.required">
-                            Your email is required.
+                            Tu correo es requerido.
                         </small>
                         <small class="form-text text-danger"
                            *ngIf="emailInput.errors.email">
-                            Your email is invalid.
+                            Tu correo es inválido.
                         </small>
                         <small class="form-text text-danger"
                            *ngIf="emailInput.errors.minlength">
-                            Your email is required to be at least 5 characters.
+                            Tu correo debe ser de al menos 5 caracteres.
                         </small>
                         <small class="form-text text-danger"
                            *ngIf="emailInput.errors.maxlength">
-                            Your email cannot be longer than 100 characters.
+                            Tu correo no puede ser más largo de 250 caracteres.
                         </small>
                     </div>
                 </div>
-                <button type="submit" [disabled]="resetRequestForm.form.invalid" class="btn btn-primary">Reset</button>
+                <button type="submit" [disabled]="resetRequestForm.form.invalid" class="btn btn-raised btn-primary">Recuperar</button>
             </form>
         </div>
     </div>
