--- a/src/main/webapp/app/user-home/user-home.component.html
+++ b/src/main/webapp/app/user-home/user-home.component.html
@@ -17,7 +17,7 @@
 
     <ng-container *ngIf="( focusGroups | participantFGFilter : searchText) as result">
         <div _ngcontent-c25="" class="col-md-6 col-sm-12" *ngFor="let focusGroup of result">
-            <form [routerLink]="['/focus-group', focusGroup.id, 'view']">
+            <!--<form [routerLink]="['/focus-group', focusGroup.id, 'view']">-->
                 <div _ngcontent-c25="" class="card card-inverse bg-primary text-center gradient-blue-grey-blue" style="height: 312.703px;">
                     <div _ngcontent-c25="" class="card-body">
                         <div _ngcontent-c25="" class="card-block pt-3">
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                 </div>
-            </form>
+            <!--</form>-->
         </div>
 
         <div _ngcontent-c25="" class="card card-inverse bg-primary text-center gradient-blue-grey-blue mr-3 ml-3" style="height: 312.703px;" *ngIf="result.length === 0">
