--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -60,28 +60,28 @@
             <br>que jamás vas a olvidar</p>
         <div class="card-deck mt-5">
             <div class="card mb-3">
-                <img class="card-img-top img-fluid" src="https://pbs.twimg.com/profile_images/1085558223023812608/94gTo4CG.jpg" alt="Card image cap">
+                <img class="card-img-top img-fluid" src="https://res.cloudinary.com/utilisimo/image/upload/v1553625664/ceo_tllztg.png" alt="Card image cap">
                 <div class="card-body text-center">
                     <h5 class="card-title">ERNESTO DESANTI</h5>
                     <p class="card-text">Coordinador</p>
                 </div>
             </div>
             <div class="card mb-3">
-                <img class="card-img-top img-fluid" src="https://lh3.googleusercontent.com/zt5k-sq5jyfy4ShSC2q0C4A7sEjPxFXRN7uzInQoazHTQ_Tg5oJoznHvyEZaPoJ4P7bHVQ=s85" alt="Card image cap">
+                <img class="card-img-top img-fluid" src="https://res.cloudinary.com/utilisimo/image/upload/v1553626517/desarrollo_we1u13.png" alt="Card image cap">
                 <div class="card-body text-center">
                     <h5 class="card-title">LEONARDO MORA</h5>
                     <p class="card-text">Desarrollo</p>
                 </div>
             </div>
             <div class="card mb-3">
-                <img class="card-img-top img-fluid" src="https://i.etsystatic.com/iusa/e98305/60031114/iusa_400x400.60031114_9obe.jpg?version=0" alt="Card image cap">
+                <img class="card-img-top img-fluid" src="https://res.cloudinary.com/utilisimo/image/upload/v1553626256/soporte_o7jpo7.png" alt="Card image cap">
                 <div class="card-body text-center">
                     <h5 class="card-title">CARLOS MADRIGAL</h5>
                     <p class="card-text">Soporte</p>
                 </div>
             </div>
             <div class="card mb-3">
-                <img class="card-img-top img-fluid" src="https://plotn08.org/wp-content/uploads/2014/06/Smite-And-Ignite-400x400.jpg" alt="Card image cap">
+                <img class="card-img-top img-fluid" src="https://res.cloudinary.com/utilisimo/image/upload/v1553626363/calidad_umdl2i.png" alt="Card image cap">
                 <div class="card-body text-center">
                     <h5 class="card-title">ÁNGEL MARÍN</h5>
                     <p class="card-text">Calidad</p>
