FIxed institution form styles

--- a/src/main/webapp/app/entities/institution/institution-form.component.html
+++ b/src/main/webapp/app/entities/institution/institution-form.component.html
@@ -1,6 +1,5 @@
 <div class="card">
     <div class="card-header">
-        <h2 class="card-title" id="jhi-institution-heading">Instituciones</h2>
     </div>
     <div class="card-body">
         <div class="px-3">
@@ -8,6 +7,7 @@
                   (ngSubmit)="save()" #editForm="ngForm">
                 <div class="row justify-content-md-center">
                     <div class="col-md-6">
+                        <h2 class="card-title" id="jhi-institution-heading">Instituciones</h2>
                         <div class="form-body">
                             <h4 class="form-section"><i class="ft-user"></i>Registro</h4>
                             <jhi-alert-error></jhi-alert-error>
@@ -45,7 +45,7 @@
                                 <label class="form-control-label" for="field_telephone">Teléfono</label>
                                 <input type="text" class="form-control" name="telephone" id="field_telephone"
                                        [(ngModel)]="institution.telephone" required #floatTelephone="ngModel" minlength="7"/>
-                                <div class="form-text text-muted danger" *ngIf="floatTelephone.dirty && floatTelephone.invalid">
+                                <div class="form-text text-muted danger" *ngIf="floatTelephone.dirty && floatTelephone.invalid || floatTelephone.touched">
                                     <small class="form-text text-muted danger" *ngIf="floatTelephone.errors.required">
                                         ¡Telefono requerido!
                                     </small>
