--- a/src/main/webapp/app/entities/institution/institution-form.component.html
+++ b/src/main/webapp/app/entities/institution/institution-form.component.html
@@ -1,10 +1,13 @@
 <div class="card">
     <div class="card-header">
+        <div class="alert alert-success" *ngIf="success">
+            <strong>¡Su registro ha sido exitoso!</strong> Por favor inicie sesión nuevamente.
+        </div>
     </div>
     <div class="card-body">
         <div class="px-3">
             <form class="form ng-untouched ng-pristine ng-valid" name="editForm" role="form" novalidate
-                  (ngSubmit)="save()" #editForm="ngForm">
+                  (ngSubmit)="save()" #editForm="ngForm" *ngIf="!success">
                 <div class="row justify-content-md-center">
                     <div class="col-md-6">
                         <h2 class="card-title" id="jhi-institution-heading">Instituciones</h2>
