--- a/src/main/webapp/app/entities/aptitude-test/aptitude-test-update.component.html
+++ b/src/main/webapp/app/entities/aptitude-test/aptitude-test-update.component.html
@@ -93,7 +93,7 @@
                         <i class="ft-x"></i><span> Cancelar</span>
                     </button>
                     <button type="submit" id="save-entity" class="btn btn-raised btn-primary">
-                        <i class="ft-save"></i><span> Registrar</span>
+                        <i class="ft-save"></i>&nbsp;<span> Editar
                     </button>
                 </div>
             </div>
