--- a/src/main/webapp/app/entities/focus-group/focus-group-detail.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-detail.component.html
@@ -7,7 +7,10 @@
                     <h5 class="col-12 col-md-12 col-sm-12">Información del grupo</h5>
                 </div>
                 <div class="col-sm-12 col-12 col-md-12 col-lg-4">
-                    <div id="codeCard" class="card bg-primary cursor-pointer" (click)="copy()">
+                    <ng-template #codeCopiedTitle>Copiado <i class="ft-check white"></i></ng-template>
+                    <div id="codeCard" class="card bg-primary cursor-pointer" placement="top"
+                         [ngbPopover]="'El texto ha sido copiado al portapapeles.'" [popoverTitle]="codeCopiedTitle"
+                         (click)="copy()">
                         <div class="card-body col-12">
                             <div class="px-3 py-3">
                                 <div class="media">
@@ -37,7 +40,8 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <ul class="no-list-style">
                             <li class="mb-2">
-                                <span class="text-bold-500 primary"><a><i class="ft-calendar font-small-3"></i> Fecha de inicio:</a></span>
+                                <span class="text-bold-500 primary"><a class="cursor-text"><i
+                                    class="ft-calendar font-small-3"></i> Fecha de inicio:</a></span>
                                 <span
                                     class="display-block overflow-hidden">{{focusGroup.beginDate | date:'longDate'}}</span>
                             </li>
@@ -46,7 +50,8 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <ul class="no-list-style">
                             <li class="mb-2">
-                                <span class="text-bold-500 primary"><a><i class="ft-calendar font-small-3"></i> Fecha de finalización:</a></span>
+                                <span class="text-bold-500 primary"><a class="cursor-text"><i
+                                    class="ft-calendar font-small-3"></i> Fecha de finalización:</a></span>
                                 <span
                                     class="display-block overflow-hidden">{{focusGroup.endDate | date:'longDate'}}</span>
                             </li>
@@ -55,7 +60,8 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <ul class="no-list-style">
                             <li class="mb-2">
-                                <span class="text-bold-500 primary"><a><i class="ft-calendar font-small-3"></i> Incentivo:</a></span>
+                                <span class="text-bold-500 primary"><a class="cursor-text"><i
+                                    class="ft-calendar font-small-3"></i> Incentivo:</a></span>
                                 <span *ngIf="focusGroup.incentive; else noIncentive"
                                       class="display-block overflow-hidden">{{focusGroup.incentive.name}}</span>
                                 <ng-template #noIncentive>
@@ -75,18 +81,18 @@
                             {{focusGroup.aptitudeTest.name}}
                         </a>
                         <!--<div id="question{{i}}" class="card bg-blue-grey bg-lighten-5"-->
-                             <!--*ngFor="let question of focusGroup.aptitudeTest.questions; let i = index">-->
-                            <!--<div class="card-header">-->
-                                <!--<span class="text-bold-500 primary">¿{{question.question}}?</span>-->
-                            <!--</div>-->
-                            <!--<div class="card-body">-->
-                                <!--<div class="card-block">-->
-                                    <!--<div class="card-block">-->
-                                            <!--<span *ngFor="let answer of question.answers" class="display-block"><i-->
-                                                <!--class="ft-minus"></i>{{answer.answer}}</span>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
+                        <!--*ngFor="let question of focusGroup.aptitudeTest.questions; let i = index">-->
+                        <!--<div class="card-header">-->
+                        <!--<span class="text-bold-500 primary">¿{{question.question}}?</span>-->
+                        <!--</div>-->
+                        <!--<div class="card-body">-->
+                        <!--<div class="card-block">-->
+                        <!--<div class="card-block">-->
+                        <!--<span *ngFor="let answer of question.answers" class="display-block"><i-->
+                        <!--class="ft-minus"></i>{{answer.answer}}</span>-->
+                        <!--</div>-->
+                        <!--</div>-->
+                        <!--</div>-->
                         <!--</div>-->
                     </div>
                     <ng-template #noAptitudeTest>
@@ -103,7 +109,8 @@
                         <input type="text" class="form-control" placeholder="Buscar por nombre..."
                                [(ngModel)]="searchText"/>
                     </div>
-                    <div *ngIf="(focusGroup.participants | participantFilter:searchText) as items; else noParticipants" class="col-12">
+                    <div *ngIf="(focusGroup.participants | participantFilter:searchText) as items; else noParticipants"
+                         class="col-12">
                         <div *ngFor="let participant of items"
                              class="col-sm-12 col-12 col-md-8 col-lg-6 col-xl-6">
                             <div class="card shadow-lg">
@@ -115,19 +122,20 @@
                                     <div class="card-block text-center">
                                         <h4 class="card-title">{{participant.user.user.firstName}} {{participant.user.user.lastName}}</h4>
                                         <p class="category text-gray font-small-4">{{participant.user.mail}}</p>
-                                        <a class="btn btn-lg gradient-pomegranate font-small-2 white p-2 mr-2 btn-hoverable">Expulsar participante</a>
+                                        <a class="btn btn-lg gradient-pomegranate font-small-2 white p-2 mr-2 btn-hoverable">Expulsar
+                                            participante</a>
                                         <!--<a class="btn btn-lg btn-outline-grey font-small-2 p-2">Enviar mensaje</a>-->
                                         <!--<hr class="grey">-->
                                         <!--<div class="row grey">-->
-                                            <!--<div class="col-4">-->
-                                                <!--<a><i class="ft-star mr-1"></i> <span>4.9</span></a>-->
-                                            <!--</div>-->
-                                            <!--<div class="col-4">-->
-                                                <!--<a><i class="ft-globe mr-1"></i> <span>USA</span></a>-->
-                                            <!--</div>-->
-                                            <!--<div class="col-4">-->
-                                                <!--<a><i class="ft-book mr-1"></i> <span>21</span></a>-->
-                                            <!--</div>-->
+                                        <!--<div class="col-4">-->
+                                        <!--<a><i class="ft-star mr-1"></i> <span>4.9</span></a>-->
+                                        <!--</div>-->
+                                        <!--<div class="col-4">-->
+                                        <!--<a><i class="ft-globe mr-1"></i> <span>USA</span></a>-->
+                                        <!--</div>-->
+                                        <!--<div class="col-4">-->
+                                        <!--<a><i class="ft-book mr-1"></i> <span>21</span></a>-->
+                                        <!--</div>-->
                                         <!--</div>-->
                                     </div>
                                 </div>
@@ -143,24 +151,39 @@
                         </div>
                     </ng-template>
                 </div>
-                <div class="card-block">
-                    <button type="submit"
-                            (click)="previousState()"
-                            class="btn btn-raised btn-warning mr-1">
-                        <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span> Volver</span>
-                    </button>
-
-                    <button type="button"
-                            [routerLink]="['/focus-group', focusGroup.id, 'edit']"
-                            class="btn btn-raised btn-primary">
-                        <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span> Editar</span>
-                    </button>
-
-                    <button type="button"
-                            [routerLink]="['/', 'focus-group', { outlets: { popup: focusGroup.id + '/delete'} }]"
-                            class="btn btn-raised btn-danger" [disabled]="!isCancelable">
-                        <span><i class="ft-x font-medium-3 mr-2"></i> Cancelar</span>
-                    </button>
+                <div class="card-block row">
+                    <div class="col-auto">
+                        <button type="submit"
+                                (click)="previousState()"
+                                class="btn btn-raised btn-warning mr-1">
+                            <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span> Volver</span>
+                        </button>
+                    </div>
+                    <div class="col-auto">
+                        <button type="button"
+                                [routerLink]="['/focus-group', focusGroup.id, 'edit']"
+                                class="btn btn-raised btn-primary">
+                            <fa-icon [icon]="'pencil-alt'"></fa-icon>&nbsp;<span> Editar</span>
+                        </button>
+                    </div>
+                    <div *ngIf="!isCancelable; else validCancelBtn"
+                         ngbPopover="Si desea cancelar este grupo de enfoque, por favor contacte a nuestros administradores."
+                         triggers="mouseenter:mouseleave" popoverTitle="Lo sentimos." class="col-auto">
+                        <button type="button"
+                                [routerLink]="['/', 'focus-group', { outlets: { popup: focusGroup.id + '/delete'} }]"
+                                class="btn btn-raised btn-danger" [disabled]="!isCancelable">
+                            <span><i class="ft-x font-medium-3 mr-2"></i> Cancelar</span>
+                        </button>
+                    </div>
+                    <ng-template #validCancelBtn>
+                        <div class="col-auto">
+                            <button type="button"
+                                    [routerLink]="['/', 'focus-group', { outlets: { popup: focusGroup.id + '/delete'} }]"
+                                    class="btn btn-raised btn-danger" [disabled]="!isCancelable">
+                                <span><i class="ft-x font-medium-3 mr-2"></i> Cancelar</span>
+                            </button>
+                        </div>
+                    </ng-template>
                 </div>
             </div>
         </div>
