--- a/src/main/webapp/content/template/sass/scss/core/_helper.scss
+++ b/src/main/webapp/content/template/sass/scss/core/_helper.scss
@@ -8,47 +8,47 @@
 // -------------------------
 // Display
 
-.display-inline{
-	display: inline !important;
+.display-inline {
+    display: inline !important;
 }
-.display-block{
-	display: block !important;
+.display-block {
+    display: block !important;
 }
-.display-inline-block{
-	display: inline-block !important;
+.display-inline-block {
+    display: inline-block !important;
 }
-.display-hidden{
-	display: none !important;
+.display-hidden {
+    display: none !important;
 }
-.display-table-cell{
+.display-table-cell {
     display: table-cell !important;
 }
 
 // Position
 
-.position-fixed{
-	position: fixed !important;
+.position-fixed {
+    position: fixed !important;
 }
-.position-relative{
-	position: relative !important;
+.position-relative {
+    position: relative !important;
 }
-.position-absolute{
-	position: absolute !important;
+.position-absolute {
+    position: absolute !important;
 }
-.position-static{
-	position: static !important;
+.position-static {
+    position: static !important;
 }
 
-.position-top-0{
+.position-top-0 {
     top: 0;
 }
-.position-right-0{
+.position-right-0 {
     right: 0;
 }
-.position-bottom-0{
+.position-bottom-0 {
     bottom: 0;
 }
-.position-left-0{
+.position-left-0 {
     left: 0;
 }
 
@@ -79,7 +79,10 @@
 .cursor-progress {
     cursor: progress;
 }
-.cursor-not-allowed{
+.cursor-text {
+    cursor: text;
+}
+.cursor-not-allowed {
     cursor: not-allowed;
 }
 
@@ -102,7 +105,7 @@
 .valign-text-bottom {
     vertical-align: text-bottom !important;
 }
-    
+
 // Overflow
 .overflow-hidden {
     overflow: hidden;
@@ -124,20 +127,20 @@
 }
 
 // Lists
-.bullets-inside{
-	list-style: inside;
+.bullets-inside {
+    list-style: inside;
 }
-.list-style-circle{
-	list-style: circle;
+.list-style-circle {
+    list-style: circle;
 }
-.list-style-square{
-	list-style: square;
+.list-style-square {
+    list-style: square;
 }
 .list-style-icons {
     padding-left: 10px;
     margin-left: 0;
     list-style: none;
-    >li i {
+    > li i {
         float: left;
         width: 1em;
         margin: 5px 12px 0 0;
@@ -218,52 +221,51 @@
 }
 
 // No border radious
-.no-border-top-radius{
+.no-border-top-radius {
     border-top-left-radius: 0 !important;
     border-top-right-radius: 0 !important;
 }
-.no-border-bottom-radius{
+.no-border-bottom-radius {
     border-bottom-left-radius: 0 !important;
     border-bottom-right-radius: 0 !important;
 }
-.no-border-top-left-radius{
+.no-border-top-left-radius {
     border-top-left-radius: 0 !important;
 }
-.no-border-top-right-radius{
+.no-border-top-right-radius {
     border-top-right-radius: 0 !important;
 }
-.no-border-bottom-left-radius{
+.no-border-bottom-left-radius {
     border-bottom-left-radius: 0 !important;
 }
-.no-border-bottom-right-radius{
+.no-border-bottom-right-radius {
     border-bottom-right-radius: 0 !important;
 }
-
 
 // Box Shadow
 
 .box-shadow-0 {
-    box-shadow: none !important
+    box-shadow: none !important;
 }
 
-.box-shadow-1{
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)
+.box-shadow-1 {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
 .box-shadow-2 {
-    box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)
+    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .box-shadow-3 {
-    box-shadow: 0 12px 15px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19)
+    box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
-.box-shadow-4{
-    box-shadow: 0 16px 28px 0 rgba(0,0,0,0.22),0 25px 55px 0 rgba(0,0,0,0.21)
+.box-shadow-4 {
+    box-shadow: 0 16px 28px 0 rgba(0, 0, 0, 0.22), 0 25px 55px 0 rgba(0, 0, 0, 0.21);
 }
 
 .box-shadow-5 {
-    box-shadow: 0 27px 24px 0 rgba(0,0,0,0.2),0 40px 77px 0 rgba(0,0,0,0.22)
+    box-shadow: 0 27px 24px 0 rgba(0, 0, 0, 0.2), 0 40px 77px 0 rgba(0, 0, 0, 0.22);
 }
 
 // Sizing
@@ -273,20 +275,20 @@
 // Width && Height
 //
 
-.fit{
-	max-width: 100% !important;
+.fit {
+    max-width: 100% !important;
 }
 .half-width {
-	width: 50% !important;
+    width: 50% !important;
 }
-.full-width{
-	width: 100% !important;
+.full-width {
+    width: 100% !important;
 }
-.full-height{
-	height: 100% !important;
+.full-height {
+    height: 100% !important;
 }
-.full-height-vh{
-	height: 100vh !important;
+.full-height-vh {
+    height: 100vh !important;
 }
 
 // Fixed widths
@@ -339,7 +341,7 @@
     width: 800px !important;
 }
 // Width in %
-.width-5-per{
+.width-5-per {
     width: 5% !important;
 }
 .width-10-per {
@@ -395,7 +397,7 @@
 }
 
 //Fixed Height in px
-.height-0{
+.height-0 {
     height: 0 !important;
 }
 .height-50 {
@@ -452,7 +454,7 @@
 
 //Fixed Height in %
 
-.height-5-per{
+.height-5-per {
     height: 5% !important;
 }
 .height-10-per {
@@ -502,16 +504,16 @@
 }
 
 // Line height
-.line-height-0{
+.line-height-0 {
     line-height: 0 !important;
 }
-.line-height-1{
+.line-height-1 {
     line-height: 1 !important;
 }
-.line-height-2{
+.line-height-2 {
     line-height: 1.5 !important;
 }
-.line-height-2{
+.line-height-2 {
     line-height: 2 !important;
 }
 
@@ -542,8 +544,12 @@
     animation: spin 1s linear infinite;
 }
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .spinner-reverse {
@@ -551,24 +557,27 @@
     animation: spin-reverse 1s linear infinite;
 }
 @keyframes spin-reverse {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(-360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(-360deg);
+    }
 }
-
 
 //
 // Image
 //
 
 //Background Image
-.bg-cover{
-    background-size:cover !important;
+.bg-cover {
+    background-size: cover !important;
 }
 .bg-repeat {
-     background-repeat:repeat !important;
+    background-repeat: repeat !important;
 }
 .bg-no-repeat {
-     background-repeat:no-repeat !important;
+    background-repeat: no-repeat !important;
 }
 
 // Extra large
