--- a/src/main/webapp/app/shared/login/login.component.html
+++ b/src/main/webapp/app/shared/login/login.component.html
@@ -35,7 +35,7 @@
                                     <div class="row">
                                         <div class="col-md-12">
                                             <div class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0 ml-3">
-                                                <input type="checkbox" class="custom-control-input" checked
+                                                <input type="checkbox" class="custom-control-input" name="rememberMe"
                                                        id="rememberMe" [(ngModel)]="rememberMe">
                                                 <label class="custom-control-label float-left white" for="rememberMe">Recuérdame</label>
                                             </div>
