--- a/src/main/webapp/app/entities/participant/participant-create.component.html
+++ b/src/main/webapp/app/entities/participant/participant-create.component.html
@@ -2,7 +2,7 @@
     <div _ngcontent-c5="" class="col-md-6">
         <div _ngcontent-c5="" class="card">
             <div _ngcontent-c5="" class="card-header">
-                <h4 _ngcontent-c5="" class="card-title" id="basic-layout-colored-form-control">Crear un participante</h4>
+                <h4 _ngcontent-c5="" class="card-title" id="basic-layout-colored-form-control">Participantes</h4>
                 <div class="alert alert-success" *ngIf="success">
                     <strong>¡Su registro ha sido exitoso!</strong> Por favor inicie sesión nuevamente.
                 </div>
@@ -24,20 +24,20 @@
                                             <input _ngcontent-c5="" class="form-control"
                                                    id="field_birthdate" name="birthdate" type="text" ngbDatepicker
                                                    #birthdateDp="ngbDatepicker" [(ngModel)]="participant.birthdate"
-                                                   required>
+                                                   required #birthDate="ngModel">
                                             <span class="input-group-append">
                                                 <button type="button" class="btn btn-secondary"
                                                         (click)="birthdateDp.toggle()">
                                                     <fa-icon [icon]="'calendar-alt'"></fa-icon></button>
                                             </span>
                                         </div>
-                                        <div [hidden]="!(editForm.controls.birthdate?.dirty && editForm.controls.birthdate?.invalid)">
+                                        <div [hidden]="!((birthDate?.dirty || birthDate?.touched) && birthDate?.invalid)">
                                             <small class="form-text text-danger"
-                                                   [hidden]="!editForm.controls.birthdate?.errors?.required">
+                                                   [hidden]="!birthDate?.errors?.required">
                                                 Este campo es requerido.
                                             </small>
                                         </div>
-                                        <div [hidden]="!(editForm.controls.birthdate?.dirty && editForm.controls.birthdate?.invalid)">
+                                        <div [hidden]="!((birthDate?.dirty || birthDate?.touched) && birthDate?.invalid)">
                                             <small class="form-text text-danger"
                                                    [hidden]="!editForm.controls.birthdate?.errors?.max">
                                                 La fecha es inválida.
@@ -50,15 +50,15 @@
                                     <div _ngcontent-c5="" class="form-group">
                                         <label _ngcontent-c5="" for="field_gender">Género</label>
                                         <select _ngcontent-c16="" class="form-control" [(ngModel)]="participant.gender"
-                                                id="field_gender" name="gender" required>
+                                                id="field_gender" name="gender" required #gender="ngModel">
                                             <option value="MALE">Hombre</option>
                                             <option value="FEMALE">Mujer</option>
                                             <option value="UNDEFINED">Otro</option>
                                         </select>
                                         <div
-                                            [hidden]="!(editForm.controls.gender?.dirty && editForm.controls.gender?.invalid)">
+                                            [hidden]="!((gender?.dirty || gender?.touched) && gender?.invalid)">
                                             <small class="form-text text-danger"
-                                                   [hidden]="!editForm.controls.gender?.errors?.required">
+                                                   [hidden]="!gender?.errors?.required">
                                                 Este campo es requerido.
                                             </small>
                                         </div>
@@ -74,7 +74,7 @@
                                         <label _ngcontent-c5="" for="field_civilStatus">Estado civil</label>
                                         <select _ngcontent-c16="" class="form-control"
                                                 [(ngModel)]="participant.civilStatus" id="field_civilStatus"
-                                                name="civilStatus" required>
+                                                name="civilStatus" required #civil="ngModel">
                                             <option value="MARRIED">Casado/a</option>
                                             <option value="WIDOWED">Viudo/a</option>
                                             <option value="SEPARATED">Separado/a</option>
@@ -82,9 +82,9 @@
                                             <option value="SINGLE">Soltero/a</option>
                                         </select>
                                         <div
-                                            [hidden]="!(editForm.controls.civilStatus?.dirty && editForm.controls.civilStatus?.invalid)">
+                                            [hidden]="!((civil?.dirty || civil?.touched) && civil?.invalid)">
                                             <small class="form-text text-danger"
-                                                   [hidden]="!editForm.controls.civilStatus?.errors?.required">
+                                                   [hidden]="!civil?.errors?.required">
                                                 Este campo es requerido.
                                             </small>
                                         </div>
@@ -118,12 +118,12 @@
 
                         </div>
                         <div _ngcontent-c5="" class="form-actions right">
-                            <button _ngcontent-c5="" class="btn btn-raised btn-warning mr-1" type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
+                            <button _ngcontent-c5="" class="btn btn-raised btn-warning mr-1" type="button" id="cancel-save" (click)="previousState()">
                                 <i _ngcontent-c5="" class="ft-x"></i>
                                 <fa-icon></fa-icon>Cancelar
                             </button>
                             <button _ngcontent-c5="" class="btn btn-raised btn-primary" type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving">
-                                <i _ngcontent-c5="" class="fa fa-check-square-o"></i>
+                                <i _ngcontent-c5="" class="ft ft-file-text"></i>
                                 <fa-icon></fa-icon>Registrar
                             </button>
                         </div>
